--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<!-- SPLASH PAGE -->
 
 		<div class="splash_init">
-			<p style="text-align:center">I am a Los Angeles based composer for screen, producer, and member of electronic/alt pop duo Tigers Are Bad For Horses.</p>
+			<p style="text-align:center">I am a Los Angeles based composer for screen, producer, pianist, and co-founder of <a href="www.altfi.fm">Alternative Fidelity</a></p>
 			<div class="splash_mobile_links">
 				<ul>
 					<li><a href="#scores" id="show_scores">film/game scores</a></li>
