--- a/index.html
+++ b/index.html
@@ -1,105 +1,102 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
-<head>
+	<head>
 
-	<script type="application/ld+json">
-	{
-	  "@context" : "http://schema.org",
-	  "@type" : "MusicGroup",
-	  "name" : "Lyell Evans Roeder",
-	  "url" : "http://www.lyell.co",
-	  "sameAs" : [
-	  	"www.lyellevans.com"
-	    "http://www.facebook.com/lyellevansroeder",
-	    "https://www.linkedin.com/in/lyellevansroeder",
-	    "https://soundcloud.com/lyell"
-	  ],
-	  "potentialAction":{
-	    "@type":"ListenAction",
-	    "target":[
-	      {
-	        "@type":"EntryPoint",
-	        "urlTemplate":"http://www.example.com/album/Artpop/?autoplay=true",
-	        "inLanguage":"English",
-	        "actionPlatform":[
-	          "http://schema.org/DesktopWebPlatform",
-	          "http://schema.org/IOSPlatform",
-	          "http://schema.org/AndroidPlatform"
-	        ]
-	      }
-	    ],
-	    "expectsAcceptanceOf":{
-	      "@type":"Offer",
-	      "eligibleRegion":[
-	        {
-	          "@type":"Country",
-	          "name":"US"
-	        },
-	        {
-	          "@type":"Country",
-	          "name":"UK"
-	        },
-	        {
-	          "@type":"Country",
-	          "name":"FR"
-	        },
-	        {
-	          "@type":"Country",
-	          "name":"CA"
-	        }
-	      ]
-	    }
-	}
-	</script>
+		<script type="application/ld+json">
+		{
+		  "@context" : "http://schema.org",
+		  "@type" : "MusicGroup",
+		  "name" : "Lyell Evans Roeder",
+		  "url" : "http://www.lyell.co",
+		  "sameAs" : [
+		  	"www.lyellevans.com"
+		    "http://www.facebook.com/lyellevansroeder",
+		    "https://www.linkedin.com/in/lyellevansroeder",
+		    "https://soundcloud.com/lyell"
+		  ],
+		  "potentialAction":{
+		    "@type":"ListenAction",
+		    "target":[
+		      {
+		        "@type":"EntryPoint",
+		        "urlTemplate":"http://www.example.com/album/Artpop/?autoplay=true",
+		        "inLanguage":"English",
+		        "actionPlatform":[
+		          "http://schema.org/DesktopWebPlatform",
+		          "http://schema.org/IOSPlatform",
+		          "http://schema.org/AndroidPlatform"
+		        ]
+		      }
+		    ],
+		    "expectsAcceptanceOf":{
+		      "@type":"Offer",
+		      "eligibleRegion":[
+		        {
+		          "@type":"Country",
+		          "name":"US"
+		        },
+		        {
+		          "@type":"Country",
+		          "name":"UK"
+		        },
+		        {
+		          "@type":"Country",
+		          "name":"FR"
+		        },
+		        {
+		          "@type":"Country",
+		          "name":"CA"
+		        }
+		      ]
+		    }
+		}
+		</script>
 
 
-	<meta charset="utf-8"/>
-	<meta name="author" content="Lyell Evans Roeder"/>
-	<meta name="description" content="Lyell is an artist, producer, and composer for film. He is also the co-founder of production house and independent label Alterative Fidelity Music Group." />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="google-site-verification" content="9-IUJjPXcS1HhYAt1I-CnoyMj0Q4nrOInRJ3O70qAC4" />
-	<meta http-equiv="Cache-control" content="no-store">
+		<meta charset="utf-8"/>
+		<meta name="author" content="Lyell Evans Roeder"/>
+		<meta name="description" content="Lyell is an artist, producer, and composer for film. He is also the co-founder of production house and independent label Alterative Fidelity Music Group." />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta name="google-site-verification" content="9-IUJjPXcS1HhYAt1I-CnoyMj0Q4nrOInRJ3O70qAC4" />
+		<meta http-equiv="Cache-control" content="no-store">
 
-	<title>Lyell Evans Roeder</title>
+		<title>Lyell Evans Roeder</title>
 
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-	<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" href="apple-touch-icon.png">
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+		<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-	<!-- jQuery Files -->
-	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
-	<!-- Stylesheets -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+		<!-- Stylesheets -->
+		<link href="css/main.css" rel="stylesheet">
 
-	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:400,300,700' rel='stylesheet' type='text/css'>
-	<script src="https://use.typekit.net/mjo7vzk.js"></script>
-	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+	</head>
+	<body>
+		<div class="wrapper">
+			<div class="splash">
 
-</head>
-<body>
-<div class="wrapper">
-	<div class="splash_preloader"></div>
+				<div class="flip-card">
+				  <div class="flip-card-inner">
+				    <div class="flip-card-front">
+				      <img src="img/afc3.svg" alt="Lyell Evans Roeder">
+				    </div>
+				    <div class="flip-card-back">
+				      <img src="img/lyell-250.jpg" alt="Alternative Fidelity Music Group">
+				    </div>
+				  </div>
+				</div>
 
-	<div class="splash_body">
-		<div id="splash_logo">
-			<center>
-				<img src="img/lcllc.png" alt="lyell evans roeder" class="splash_logo" />
-				<div class="lcllc_text">lyell evans roeder</div>
-			</center>
-			<br/>
-			<div class="splash_line"></div>
+				<div class="line"></div>
+
+				<div class="splash_init">
+					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, and composer. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. Outside of music, he designs and develops beautiful, intuitive web experiences.</p>
+				</div>
+			</div>
 		</div>
-
-		<!-- SPLASH PAGE -->
-
-		<div class="splash_init">
-			<p style="text-align:center">I am a Los Angeles based artist, producer, and composer. I co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. Outside of music, I design and develop beautiful, intuitive web experiences.</p>
-		</div>
-</body>
+	</body>
 </html>
