--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="flip-card">
 				  <div class="flip-card-inner">
 				    <div class="flip-card-front">
-				      <img src="img/afc3.svg" alt="Lyell Evans Roeder">
+				      <img src="img/ttc-bg.svg" alt="Lyell Evans Roeder">
 				    </div>
 				    <div class="flip-card-back">
 				      <img src="img/lyell-250.jpg" alt="Alternative Fidelity Music Group">
