--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 				<div class="flip-card">
 				  <div class="flip-card-inner">
 				    <div class="flip-card-front">
-				      <img src="img/ttc-bg.svg" alt="Lyell Evans Roeder">
+				      <img src="img/lyell-250.jpg" alt="Lyell Evans Roeder">
 				    </div>
 				    <div class="flip-card-back">
-				      <img src="img/lyell-250.jpg" alt="Alternative Fidelity Music Group">
+				      <img src="img/ttc-bg.svg" alt="Alternative Fidelity Music Group">
 				    </div>
 				  </div>
 				</div>
@@ -94,7 +94,7 @@
 				<div class="line"></div>
 
 				<div class="splash_init">
-					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, and composer. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. Outside of music, he designs and develops beautiful, intuitive web experiences.</p>
+					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, and composer. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. He is also the lead designer of <a href="https://www.twelvetonecreative.com">Twelve Tone Creative</a>.</p>
 				</div>
 			</div>
 		</div>
