--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="line"></div>
 
 				<div class="splash_init">
-					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, and composer. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. He is also the lead designer of <a href="https://www.twelvetonecreative.com">Twelve Tone Creative</a>.</p>
+					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, and composer. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. He creates designs and web experiences with <a href="https://www.twelvetonecreative.com">Twelve Tone Creative</a>.</p>
 				</div>
 			</div>
 		</div>
