--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="line"></div>
 
 				<div class="splash_init">
-					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, and composer. He scored <a href="https://en.wikipedia.org/wiki/Marakkar:_Lion_of_the_Arabian_Sea" target="_blank">Marakkar: Arabikadalinte Simham</a>, winner of the 2020 Indian National Award for Best Feature Film. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. He is the founder and lead designer of <a href="https://www.12tonecreative.com">12TC</a>.</p>
+					<p>Lyell Evans Roeder is a Los Angeles based artist, producer, composer, and designer. He scored <a href="https://en.wikipedia.org/wiki/Marakkar:_Lion_of_the_Arabian_Sea" target="_blank">Marakkar: Arabikadalinte Simham</a>, winner of the 2020 Indian National Award for Best Feature Film. He co-founded <a href="https://www.altfi.fm">Alternative Fidelity Music Group</a>. He is the founder and lead designer of <a href="https://www.12tonecreative.com">12TC</a>.</p>
 				</div>
 			</div>
 		</div>
